@@ -1,3 +1,6 @@
+* Fri Dec 14 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.1
+- Fix infinite recursion issue in the SH profile script
+
 * Mon Nov 05 2018 Liz Nemsick <lnemsick-simp@gmail.com> - 0.1.0
 - Update to Hiera 5
 
